fix correct alignment of form field and entity select

--- a/src/app/core/entity-components/entity-form/entity-form/entity-form.component.scss
+++ b/src/app/core/entity-components/entity-form/entity-form/entity-form.component.scss
@@ -23,6 +23,7 @@ $max-screen-width: $min-block-width + $margin-main-view-right + $margin-main-vie
 
 .columns-wrapper {
   @include adaptive-grid($min-block-width, $max-screen-width);
+  align-items: end;
 }
 
 .action-button {
